[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ws-replay"
version = "0.1.0"
description = "Record, replay, and diff WebSocket sessions to reproduce real-time bugs locally."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "ws-replay contributors" }]
keywords = ["websocket", "debugging", "replay", "testing", "proxy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet",
]
dependencies = [
    "click>=8.0",
    "websockets>=12.0",
    "rich>=13.0",
]

[project.scripts]
ws-replay = "ws_replay.cli:cli"

[project.urls]
Homepage = "https://github.com/ws-replay/ws-replay"
Issues = "https://github.com/ws-replay/ws-replay/issues"
